--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -1,5 +1,5 @@
 /* ============================
-   ESTILOS DEL LOGIN (AISLADOS)
+   ESTILOS DEL LOGIN (AISLADOS) : osea los solitos que se ven aparte 
    ============================ */
 
 /* Solo aplica al login */
@@ -79,7 +79,7 @@
 
 /* ============================
    ESTILOS GLOBALES DEL SISTEMA
-   (NO AFECTAN LOGIN)
+   (NO AFECTAN LOGIN) POR SI ACASOO
    ============================ */
 
 body {
