--- a/src/main/resources/templates/aprendices/importar.html
+++ b/src/main/resources/templates/aprendices/importar.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" th:href="@{/css/dashboard.css}">
     
     <style>
-        /* Estilo especial para el botón de importar (Verde Excel) */
+        /* Estilo especial para el botón de importar VERDESITO WONITO */
         .btn-import {
             background: linear-gradient(135deg, #219150, #2ecc71);
             color: white;
@@ -95,7 +95,7 @@
 
                     <div style="margin-top: 20px;">
                         <button type="submit" class="btn-import">
-                            📂 Subir y Procesar
+                             Subir y Procesar
                         </button>
                         
                         <div style="margin-top: 15px;">
