--- a/src/main/resources/templates/coordinaciones/editar.html
+++ b/src/main/resources/templates/coordinaciones/editar.html
@@ -4,9 +4,7 @@
     <title>Editar Coordinación</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <link rel="icon" type="image/png" th:href="@{/img/logo-sena.png}">
-
     <link rel="stylesheet" th:href="@{/css/dashboard.css}">
 </head>
 <body>
@@ -14,11 +12,9 @@
     <div th:replace="~{dashboard :: sidebar}"></div>
     
     <div class="main-content">
-        
         <header th:replace="~{dashboard :: header-top}"></header>
 
         <div class="dashboard-area">
-            
             <h3 style="text-align: center; margin-bottom: 25px;">Editar Coordinación</h3>
 
             <div class="form-container">
@@ -31,14 +27,20 @@
                     
                     <input type="hidden" th:field="*{id}">
                     
+                    <input type="hidden" th:field="*{activo}">
+                    
                     <div class="form-group" style="margin-bottom: 25px;">
                         <label style="font-weight: 700; color: #555; margin-bottom: 8px; display:block;">Nombre de la Coordinación</label>
-                        <input type="text" th:field="*{nombre}" class="form-control" required>
+                        
+                        <input type="text" th:field="*{nombre}" class="form-control" 
+                               minlength="5" maxlength="100"
+                               oninput="this.value = this.value.replace(/[^a-zA-ZáéíóúÁÉÍÓÚñÑ ]/g, '')"
+                               required>
+                               
                         <span th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" class="error-message"></span>
                     </div>
 
                     <div style="display: flex; align-items: center; gap: 15px;">
-                        
                         <button type="submit" class="btn-main btn-edit" style="border: none; cursor: pointer; width: 100%; justify-content: center;">
                             Actualizar
                         </button>
@@ -47,7 +49,6 @@
                             Cancelar
                         </a>
                     </div>
-
                 </form>
             </div>
         </div>
